src/adventure.css
/********* Headers/Titles/Icons ***********************/
body.theme_black_bg { background-color:black; color:white; }

#homeIcon { text-align: left; font-size: 20px; cursor: pointer; float:none; display:block; padding-top: 1%; padding-left: 1%; }
#homeIcon::after { content:" home"; }

#adventureTitle { font-size:28px; }
.adventureSubtitle { font-size: 24px; }
.protectedIcon { color:goldenrod; }
.openLinkIcon { font-size:smaller !important; }
.adventureDate { font-size:smaller !important; font-style:italic;}


/********* Main Page ***********************/

#findAdventureSection { border-top:2px solid white; border-bottom: 2px solid white; padding-bottom:2%; }
.filterOption { border:1px solid white; border-radius:77px; cursor:pointer; padding:1%; margin:3%; }
.filterOption.filterOptionSelected { background-color:aqua; color:black; }

#adventuresPanel { padding-top:5%; }

.additionalDetailsToggle { font-style:italic; font-size:smaller;color:orange !important; display:block; margin:auto; }
.additionalDetailsToggle.spaced { border-bottom: 2px dashed white; padding-bottom:1% !important; margin-bottom:1% !important;}
.additionalDetailsToggle.small { width: 100%; }
.additionalDetailsToggle.large { width: 100%; }

.adventure_block { margin-bottom:2% !important; padding-bottom:2%; width:90%; margin:auto; }
.adventure_block.hidden { opacity: 0px;}
.adventureBlockSeparator { border:none; height:5px; background-color:white;}
.adventure_block h2 { font-size: 18px; }
.adventure_block a { text-decoration: none; color:aqua}
.adventure_block a:visited { text-decoration: none; color:aqua }

/********* Adventure Page ***********************/

#adventureDescription { clear:both; }

#videoFrameProtectedSection { font-size:larger; }
#protectedVideoForm label { font-size:150%; }
#protectedVideoForm input,button { font-size:130%; }
#protectedMessage { color:red; }

.video_editor { font-size:50%; font-style:italic; }

#videoNavigationSection { width: 90%; margin:auto; }
.navButton { font-size:18px; }


#videoPickerSection { width: 90%; margin: auto; padding-top:2%; }
.videoPickerBlock { margin-bottom:3% !important; color:white !important; opacity: 95%; }
.videoPickerBlock .datacell { vertical-align: top;}
.videoPickerBlock .title { margin-top:0px; color:gray; font-size:18px; }
.videoPickerCircle { height:25px; width:25px; line-height: 25px; background-color: darkgray; color:black; border-radius: 50%; display: inline-block; }
.videoPickerCircle.selected { background-color:limegreen !important; color: black; }
.videoPickerBlock .title.selected { color:limegreen !important; }

/**************************************************** 
	MEDIA SCREENS
*****************************************************/

@media only screen and (min-device-width:1200px)
{
	.additionalDetailsToggle.small { width: 60%; }
	.additionalDetailsToggle.large { width: 90%; }
	.filterOption { margin:0.2%; padding:0.5%; }
	#videoPickerSection { width: 35%; }
	#videoNavigationSection { width: 35%; margin:auto; }
	#homeIcon { display: block; float:left; font-size: 30px; padding:0px; }
	#homeIcon::after { content: ""; }
}

